provarAnt/00D190000000ZY2EAM/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>All_Line_Items_Priced__c</fullName>
        <formula>(LineItemCount &gt; 0)  &amp;&amp;  (LineItemCount  =  Priced_Line_Item_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Line Items Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_Address__c</fullName>
        <formula>ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_City__c</fullName>
        <formula>ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <formula>Opportunity.Account.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Phone__c</fullName>
        <formula>Opportunity.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_State__c</fullName>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Zip__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priced_Line_Item_Count__c</fullName>
        <label>Priced Line Item Count</label>
        <summarizedField>QuoteLineItem.Is_Priced__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Restricted_Display__c</fullName>
        <formula>ISPICKVAL(Opportunity.Account.Web_Inventory_Status__c, &apos;Restricted Display&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restricted Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Retail__c</fullName>
        <formula>Opportunity.Total_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Quote_Not_Priced</fullName>
        <active>true</active>
        <label>Quote Not Priced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Not_Synced</fullName>
        <active>true</active>
        <label>Quote Not Synced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Synced</fullName>
        <active>true</active>
        <label>Quote Synced</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>